# django-deployment-guide

./: AllPracticePrograms.ipynb  DeploymentInstructions.docx  Dockerfile  README.md
.github/workflows/: access-server.yml  run-tests.yml
demo_project/: settings.py
django-demo/: pyproject.toml
django-demo/demo_project/: settings.py  urls.py
django-demo/first_app/: urls.py  views.py
first_app/: views.py
